--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <app-hello></app-hello>
+  <nested-parent></nested-parent>
 </body>
 </html>
