--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,7 @@
   <app-root>Loading...</app-root>
   <app-hello></app-hello>
   <nested-parent></nested-parent>
+  <parent-to-child-input></parent-to-child-input>
+  <app-root2></app-root2>
 </body>
 </html>
